<resources>
    <string name="app_name">MeetAll</string>
    <string name="add">Add</string>
    <string name="enter_vk_user_s_id">enter vk user\'s id</string>
    <string name="vk">Вконтакте</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="share">Поделиться:</string>
    <string name="number">Номер телефона</string>
    <string name="save_my_number">Save my number</string>
    <string name="read">Read</string>
    <string name="meetall">MeetAll Request</string>
    <string name="post">POST</string>
    <string name="get">GET</string>
    <integer name="com_vk_sdk_AppId">6272452</integer>
</resources>
