<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kolot.hackathon.MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/contact_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:hint="enter contact's id"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="140dp"
                android:text="@string/share"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="384dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/vk"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:layout_marginLeft="8dp" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="340dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="24dp"
                android:text="@string/facebook"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/checkBox3"
                app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="346dp"
                android:layout_height="30dp"

                android:layout_marginTop="24dp"
                android:text="@string/number"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/checkBox4"
                app:layout_constraintTop_toBottomOf="@+id/checkBox4"
                tools:ignore="NotSibling" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="274dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="24dp"
                android:text="@string/instagram"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/checkBox"
                app:layout_constraintTop_toBottomOf="@+id/checkBox" />

            <TextView
                android:id="@+id/myIniqKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>


    <Button
        android:id="@+id/buttonMeetAllGET"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/get"
        android:textColor="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonMeetAllLOGIN"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:text="login"
        android:textColor="#ffff"
        app:layout_constraintBottom_toTopOf="@+id/buttonMeetAllGET"
        app:layout_constraintEnd_toEndOf="@+id/buttonMeetAllGET"
        app:layout_constraintStart_toStartOf="@+id/buttonMeetAllGET" />
</android.support.constraint.ConstraintLayout>
